--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,1 +1,12 @@
-<h1><%= @restaurants %></h1>
+<h1>Restaurant City</h1>
+
+
+<ul>
+  <% @restaurants.each do |restaurant| %>
+    <li>
+      <%= link_to restaurant.name, restaurant_path(restaurant) %>
+    </li>
+  <% end %>
+</ul>
+
+<%= link_to "Create Restaurant", new_restaurant_path %>
