--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,12 +1,11 @@
-<h1>Restaurant City</h1>
+<h1>Restaurants</h1>
 
+<div class="container">
+    <% @restaurants.each do |restaurant| %>
+      <div class="row">
+            <%= link_to restaurant.name, restaurant_path(restaurant) %>
+      </div>
+    <% end %>
+  <%= link_to "Create Restaurant", new_restaurant_path, class: 'btn btn-success' %>
+</div>
 
-<ul>
-  <% @restaurants.each do |restaurant| %>
-    <li>
-      <%= link_to restaurant.name, restaurant_path(restaurant) %>
-    </li>
-  <% end %>
-</ul>
-
-<%= link_to "Create Restaurant", new_restaurant_path %>
