--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,9 +1,26 @@
-<%= simple_form_for(@restaurant) do |f| %>
-<%= f.input :name %>
-<%= f.input :address %>
-<%= f.input :phone_number %>
-<%= f.select :category, Restaurant::CATEGORIES %>
-<%= f.submit %>
 
-<% end %>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-4 col-offset-3">
+      <%= simple_form_for(@restaurant) do |f| %>
+        <%= f.input :name %>
+        <%= f.input :address %>
+        <%= f.input :phone_number %>
+        <%= f.select :category, Restaurant::CATEGORIES %>
+        <%= f.submit %>
+
+      <% end %>
+      <%= link_to "Back to Main", restaurants_path, class: "btn btn-primary"%>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
 
