--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,3 +1,26 @@
 <h1><%= @restaurant.name %></h1>
-<p><%= @restaurant.address %></p>
-<p> Contact: <%= @restaurant.phone_number %></p>
+
+
+<div class="container">
+  <div class="row">
+    <p><%= @restaurant.address %></p><br>
+    <p> Category:  <%= @restaurant.category %></p><br>
+    <p> Contact: <%= @restaurant.phone_number %></p><br>
+  </div>
+</div>
+
+
+
+
+
+
+<br>
+<% @restaurant.reviews.each do |review| %>
+<%= review.content %>
+<%= review.rating %>
+<% end %>
+
+<br>
+<%= link_to "Write a Review", new_restaurant_review_path(@restaurant), class: 'btn btn-primary'%>
+<%= link_to "Back to All", restaurants_path, class: 'btn btn-danger'%>
+
